force-app/main/default/objects/Vente__c/Vente__c.object-meta.xml
<CustomObject>
    <description>Object représentant   la vente de la pharmacie.</description>
    <label>Vente</label>
    <nameField>
        <displayFormat>Vente-{0000}</displayFormat>
        <label>Vente Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ventes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>