force-app/main/default/objects/Vente__c/fields/ARembourse__c.field-meta.xml
<CustomField>
    <fullName>ARembourse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champs désignant si le déficite est a remboursé</description>
    <label>A Rembourse</label>
    <type>Checkbox</type>
</CustomField>