force-app/main/default/objects/Vente__c/fields/FondDeCaisse__c.field-meta.xml
<CustomField>
    <fullName>FondDeCaisse__c</fullName>
    <description>Valeur monétaire trouver a la caisse</description>
    <label>Fond de Caisse</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>