force-app/main/default/objects/Vente__c/fields/Recette__c.field-meta.xml
<CustomField>
    <fullName>Recette__c</fullName>
    <description>Valeur monétaire totale associée à la vente</description>
    <label>Recette</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>