force-app/main/default/objects/Vente__c/fields/Surplus__c.field-meta.xml
<CustomField>
    <fullName>Surplus__c</fullName>
    <description>Valeur monaitaire de surplus dans la recette</description>
    <label>Surplus</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>