force-app/main/default/objects/Vente__c/listViews/Ventes.listView-meta.xml
<ListView>
    <fullName>Ventes</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>FinVente__c</columns>
    <columns>FondDeCaisse__c</columns>
    <columns>Recette__c</columns>
    <filterScope>Mine</filterScope>
    <label>Ventes</label>
</ListView>