force-app/main/default/objects/Vente__c/listViews/Ventes_Avec_Surplus.listView-meta.xml
<ListView>
    <fullName>Ventes_Avec_Surplus</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>FinVente__c</columns>
    <columns>FondDeCaisse__c</columns>
    <columns>Recette__c</columns>
    <columns>Surplus__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Surplus__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Ventes Avec Surplus</label>
</ListView>