force-app/main/default/objects/Vente__c/listViews/Vue_recemment.listView-meta.xml
<ListView>
    <fullName>Vue_recemment</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>FinVente__c</columns>
    <columns>FondDeCaisse__c</columns>
    <columns>Recette__c</columns>
    <filterScope>Mine</filterScope>
    <label>Vue récemment</label>
</ListView>